--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,12 @@ body {
   font-weight: 400;
   color:#283136;
   background-color: #ffffff;
+  width:1440px;
 }
-/* *{
-  background: rgba(0,45,23,0.3);
-} */
+img {
+max-width: 100%;
+height: auto;
+}
 a {
   text-decoration: none;
 }
@@ -36,23 +38,26 @@ a {
 .row {
   display:flex;
   justify-content: space-between;
-  padding-top:80px;
-  padding-bottom:80px;
-  border-bottom:2px solid #e1e1e1;
+  padding-top: 40px;
+  padding-bottom: 50px;
+  border-bottom: 2px solid #e1e1e1;
+  width: 100%;
 }
 .footer-social {
   display:flex;
 
 }
 .main-navigation {
+  padding:0;
+  margin:0;
   display: flex;
   align-items: center;
+  padding-top:50px;
+
 }
 .nerds-logo {
   position: relative;
   width: 100%;
-  padding-right: 20px;
-  padding-left: 20px;
   -ms-flex: 0 0 25%;
   -webkit-box-flex: 0;
   flex: 0 0 25%;
@@ -73,9 +78,9 @@ a {
 }
 .site-navigation {
   position: relative;
+  margin:0;
+  padding:0;
   width: 100%;
-  padding-right: 20px;
-  padding-left: 20px;
   -ms-flex: 0 0 50%;
   -webkit-box-flex: 0;
   flex: 0 0 50%;
@@ -84,12 +89,15 @@ a {
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
+  padding-left: 72px;
+  padding-right: 70px;
+  padding-top: 7px;
 }
 .user-navigation {
   position: relative;
   width: 100%;
-  padding-right: 20px;
-  padding-left: 20px;
+  margin:0;
+  padding:0;
   -ms-flex: 0 0 25%;
   -webkit-box-flex: 0;
   flex: 0 0 25%;
@@ -98,6 +106,7 @@ a {
   box-sizing: border-box;
   display: flex;
   justify-content: flex-end;
+  padding-top: 7px;
 }
 .cart {
   position: relative;
@@ -109,7 +118,7 @@ a {
   height: 15px;
   background-image: url(../img/cart-icon.svg);
   top:7px;
-  left:-25px;
+  left:-41px;
 }
 .site-navigation,.user-navigation {
   list-style: none;
@@ -137,9 +146,10 @@ color:#fb565a;
 }
 .main-slider-item {
   display: none;
-  padding: 60px 0 80px;
   background-repeat: no-repeat;
-  background-position: bottom right;
+  background-position: 93% 96%;
+  padding-top: 70px;
+  padding-bottom: 80px;
 }
 .main-slider-item.active {
   display: block;
@@ -148,13 +158,13 @@ color:#fb565a;
   background-image: url(../img/slide1.png);
 }
 .main-slider-item-slide-2 {
-  background-image: url(../img/nerds-index-slide-2);
+  background-image: url(../img/nerds-index-slide2.png);
 }
 .main-slider-item-slide-3 {
-  background-image: url(../img/nerds-index-slide-3);
+  background-image: url(../img/nerds-index-slide3.png);
 }
 .main-slider-content {
-  max-width: 460px;
+  max-width: 515px;
 }
 .main-slider-title {
   display: block;
@@ -162,9 +172,13 @@ color:#fb565a;
   line-height:55px;
   font-weight:500;
   color:#000000;
+  padding-bottom: 10px;
+}
+.main-slider-description {
+  padding-bottom: 25px;
 }
 .main-slider-button {
-  padding: 18px 55px;
+  padding: 15px 54px;
   color:#ffffff;
   line-height: 18px;
   text-transform: uppercase;
@@ -177,7 +191,7 @@ color:#fb565a;
 .main-slider-button:focus {
   background-color: #e74246;
 }
-.main-slider-button:active{
+.main-slider-button:active {
   background-color: #d7373b;
   color:#e26f72;
   box-shadow: 0 3px  #c13135 inset;
@@ -185,7 +199,7 @@ color:#fb565a;
 .main-slider-dots {
   text-align: center;
   position: absolute;
-  bottom: 50px;
+  bottom: 90px;
   width: 100%;
 }
 .main-slider-dot {
@@ -194,6 +208,17 @@ color:#fb565a;
   border-radius: 50%;
   border: 0 none;
   background-color: #ffffff;
+  position: relative;
+}
+.main-slider-dot.active-dot {
+  background-image: url(../img/slider-button.svg);
+  background-position: 50% 50%;
+}
+.main-slider-dot:first-child {
+left:-13px;
+}
+.main-slider-dot:nth-child(3) {
+  left: 13px;
 }
 .products {
   background-color:#ffffff;
@@ -206,24 +231,31 @@ color:#fb565a;
   border-bottom:2px solid #e1e1e1;
   padding:0;
   margin:0;
-  padding-bottom:80px;
+  padding-bottom: 80px;
+  padding-right: 60px;
 }
 .products-list li {
+  padding:0
+  margin: 0;
   position: relative;
-    width: 100%;
-    padding-right:20px;
-    -ms-flex: 0 0 33.333333%;
-    -webkit-box-flex: 0;
-    flex: 0 0 33.333333%;
-    max-width: 33.333333%;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+  width: 300px;
+
 }
 .products-list h3 {
+  margin: 0;
+  padding: 0;
   font-size:24px;
   line-height:30px;
   font-weight: 700;
   color:#000000;
+  margin-top: 18px;
+  margin-bottom: 16px;
+}
+.products-list p {
+  max-width: 245px;
+  margin:0;
+  padding:0;
+  padding-bottom: 34px;
 }
 .product-order {
   padding: 15px 40px;
@@ -270,36 +302,73 @@ color:#fb565a;
 }
 .about-us-studio {
   display:block;
-  font-size:45px;
-  font-weight:500;
-  line-height:45px;
-  color:#000000;
+  font-size: 45px;
+  font-weight: 500;
+  line-height: 45px;
+  color: #000000;
+  max-width: 100%;
+  padding-bottom: 17px;
 }
-
+.about-us {
+  max-width: 700px;
+  padding-top: 35px;
+}
+.about-us-tagline {
+  max-width: 650px;
+  padding-bottom: 22px;
+}
 .orders {
+  margin: 0;
+  padding: 0;
   font-weight: 700;
   text-transform:uppercase;
+  line-height: 24px;
   color:#000000;
+
 }
 .about-us-orders {
   list-style:none;
+  margin: 0;
+  padding: 0;
+  padding-left: 36px;
+  padding-top: 24px;
 }
 .about-us-orders li {
   position:relative;
+  padding-bottom: 24px;
 }
 .about-us-orders li::before {
   content:'';
   position:absolute;
-  width: 26px;
+  width: 24px;
   height:2px;
   background-color: #fb565a;
-  top: 50%;
-  left:-3%;
+  top: 22%;
+  left:-5%;
+}
+.statistics {
+  max-width: 360px;
+}
+.statistics-logo {
+  padding-bottom: 30px;
 }
 .statistics p {
+  margin: 0;
+  padding: 0;
   font-weight:700;
   text-transform: uppercase;
   color:#000000;
+  padding-left: 16px;
+  padding-bottom: 45px;
+}
+.statistics-table {
+  border-collapse: collapse;
+}
+.statistics-percents td {
+  padding: 0px 23px 37px 0px;
+}
+.statistics-persent {
+  font-size: 25px;
 }
 .statistics-percents {
   font-weight:bold;
@@ -315,10 +384,14 @@ color:#fb565a;
   margin: 0;
   list-style:none;
   display:flex;
-  justify-content:space-between;
-  border-bottom:2px solid #e1e1e1;
+  justify-content: space-between;
+  border-bottom: 2px solid #e1e1e1;
+  width: 100%;
 }
-.projects-list li{
+
+.projects-list li {
+  margin: 0;
+  padding: 0;
   position: relative;
 }
 .projects-list li:not(:last-child)::after{
@@ -330,6 +403,9 @@ color:#fb565a;
   top: 65px;
 }
 .projects-list a {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
   opacity:0.2;
 }
 .projects-list a:hover,.projects-list a:focus {
